--- a/ClaseIndex/index.html
+++ b/ClaseIndex/index.html
@@ -8,9 +8,33 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="./css/style.css">
    </head>
-   <body>
+   <body background="./img/Small.jpg">
      <header>
-        <nav></nav>
+        <nav>
+           <div id="container">
+            <form action="">
+              <label for="Nombre">
+                 <span>Ingresa tu nombre</span>
+                 <input type="text" id="nombre" placeholder="Tu nombre"/>
+              </label>
+              <label for="Edad">
+                 <span>Ingresa tu edad</span>
+                 <input type="number" id="Edad" placeholder="Tu edad"/>
+              </label>
+              <label>
+                 <span>Ingresa tu email</span>
+                 <input type="email" id="email" placeholder="example@example.com"/>
+              </label>                
+              </select>
+              <input list="Región">
+              <datalist id="Región">
+               <option value="Estado de México">Edomex</option>
+               <option value="Ciudad de México">CDMX</option>
+              </datalist>
+              <button id="REG">Comenzar tu compra</button>
+           </form>
+         </nav>
+      </div>
      </header>
       <main>
          <section>
