agregando imagenes y centralizando

--- a/ClaseIndex/index.html
+++ b/ClaseIndex/index.html
@@ -37,19 +37,16 @@
       </div>
      </header>
       <main>
-         <section>
-            <article>
-
-            </article>
-         </section>
-           <h3> Realiza aquí tus compras del super</h3>
-           <p>Tu mejor opción</p>
+         <h3> Realiza aquí tus compras del super</h3>
+            <p>Tu mejor opción</p>         
            <P> Ingresa a cada una de nuestras secciones</P>
-
             <ul>
-              <a href="https://www.walmart.com.mx/juguetes" target="_blanck">Juguetes para Navidad</a>         
-               <ol>
-                  <li>Hot Wheals</li>
+              <a  href="https://www.walmart.com.mx/juguetes" target="_blanck">
+               <li>Juguetes para Navidad></li>
+              </a>                   
+               <ol id="texto1">
+                  <img id="Juguete" src="./img/juguete.jgp.jfif" />
+                  <li>Hot Wheals</li> 
                   <li>Barbies</li>
                   <li> juegos para toda la familia</li>
                </ol>
@@ -58,7 +55,8 @@
                <a href="https://www.walmart.com.mx/productos?Ntt=linea%20blanca" target="_blanck">
                 <li>Línea blanca y todo para el hogar</li>
                </a>
-                <ol>
+                <ol id="texto2">
+                   <img id="refri" src="./img/refrigerador.jfif" />
                    <li>Lavadoras</li>
                    <li>Refrigeradores</li>
                    <li> y ropa vieja que venda</li>
@@ -69,12 +67,12 @@
                <a href="https://www.walmart.com.mx/deportes/motos" target="_blanck">
                 <li>Y hasta motocicletas</li>
                </a>
-                  <ol>
+                  <ol id="texto3">
+                   <img id="moto" src="./img/moto.jfif"/>
                    <li>Bajaj</li>
                    <li>Mortalika</li>
                    <p>Y algunas otras más varas</p>
                   </ol>
-
-             </ul>   
+             </ul>  
    </body>
 </html>
