--- a/ClaseIndex/index.html
+++ b/ClaseIndex/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="./css/style.css">
    </head>
-   <body background="./img/Small.jpg">
+   <body background="./img/Small.jpg" width="60%">
      <header>
         <nav>
            <div id="container">
@@ -40,6 +40,7 @@
          <h3> Realiza aquí tus compras del super</h3>
             <p>Tu mejor opción</p>         
            <P> Ingresa a cada una de nuestras secciones</P>
+           <div id="cuerpo">
             <ul>
               <a  href="https://www.walmart.com.mx/juguetes" target="_blanck">
                <li>Juguetes para Navidad></li>
@@ -73,6 +74,7 @@
                    <li>Mortalika</li>
                    <p>Y algunas otras más varas</p>
                   </ol>
-             </ul>  
+             </ul> 
+            </div> 
    </body>
 </html>
