--- a/ClaseIndex/index.html
+++ b/ClaseIndex/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
    <head>
      <meta charset="UTF-8">
-     <meta name="description" content="Esta página te mostrará fotos de gatos" />
+     <meta name="description" content="En esta pàgina podràs realizar tus compras" />
      <meta name="robots" content="index,follow">  
-      <title>Es mi página</title>
+      <title>Realiza tus compras</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="./css/style.css">
    </head>
@@ -33,25 +33,26 @@
               </datalist>
               <button id="REG">Comenzar tu compra</button>
            </form>
-         </nav>
+         </nav>         
       </div>
      </header>
       <main>
          <h3> Realiza aquí tus compras del super</h3>
-            <p>Tu mejor opción</p>         
+            <p>Tu mejor opción</p>       
            <P> Ingresa a cada una de nuestras secciones</P>
            <div id="cuerpo">
-            <ul>
+            <figure>
+               <img id="Juguete"
+                src="./img/juguete.jgp.jfif"
+                 alt="Belbot" />             
               <a  href="https://www.walmart.com.mx/juguetes" target="_blanck">
-               <li>Juguetes para Navidad></li>
-              </a>                   
-               <ol id="texto1">
-                  <img id="Juguete" src="./img/juguete.jgp.jfif" />
-                  <li>Hot Wheals</li> 
-                  <li>Barbies</li>
-                  <li> juegos para toda la familia</li>
-               </ol>
-            </ul>
+               Juguetes para Navidad
+              </a>
+                  <p>Hot Wheals</p> 
+                  <p>Barbies</p>
+                  <p> juegos para toda la familia</p>                       
+           </figure>       
+         </div>  
             <ul>
                <a href="https://www.walmart.com.mx/productos?Ntt=linea%20blanca" target="_blanck">
                 <li>Línea blanca y todo para el hogar</li>
@@ -75,6 +76,6 @@
                    <p>Y algunas otras más varas</p>
                   </ol>
              </ul> 
-            </div> 
+           </div> 
    </body>
 </html>
