tipo de letra 2.0

--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -25,7 +25,8 @@
                     <label for="email">
                       <span>Registra tu Email</span>
                       <input type="email" id="email" placeholder="tucorreo@dominio.com" autocomplete="email" required />
-                    </label>               
+                    </label for="Ciudad">  
+                      <span>Registra tu Ciudad</span>              
                     <input list="Ciudad" autocomplete="country-name" placeholder="Tu Ciudad" required />
                         <datalist id="Ciudad">
                           <option value="Estado de México">Edomex</option>
@@ -47,7 +48,7 @@
             </label>              
                 <div id="CUERPO">
                     <div id="JUGUETES">                        
-                        <img id="JUGUET1" src="./imagen/juguete.jgp.jfif" alt="Belbot" width="10%" />                            
+                        <img id="JUGUET1" src="./imagen/juguete.jgp.jfif" alt="Belbot" width="15%" />                            
                             <ul>
                                 <a href="https://www.walmart.com.mx/juguetes" target="_blanck">
                                   <li>Juguetes para Navidad</li>
@@ -61,7 +62,7 @@
                             </ul>                            
                     </div>
                     <div id="LINEABLANCA">
-                        <img id="REFRI" src="./imagen/refrigerador.jfif" alt="Refrigerador" width="8%" />
+                        <img id="REFRI" src="./imagen/refrigerador.jfif" alt="Refrigerador" width="15%" />
                         <ul>
                                 <a href="https://www.walmart.com.mx/productos?Ntt=linea%20blanca" target="_blanck">
                                   <li>Lìnea blanca y todo para el hogar</li> 
@@ -75,7 +76,7 @@
                             </ul> 
                     </div>
                     <div id="MOTOS">
-                        <img id="MOTO1" src="./imagen/moto.jfif" alt="Motocicletas" width="10%" />
+                        <img id="MOTO1" src="./imagen/moto.jfif" alt="Motocicletas" width="15%" />
                             <ul>
                                 <a href="https://www.walmart.com.mx/deportes/motos" target="_blanck">
                                   <li>Y hasta Motocicletas</li>
