--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -15,6 +15,14 @@
                       alt="MiLogo"/>          
                     <span id="TAGLINE">Realiza aquí tus compras del super y màs ...</span>                
                 </div>
+                <nav>
+                    <ul class="nav">
+                        <li><a href="https://albertonava-16.github.io/Curso-Html.io/Paginafinal/index.html?">home</a></li>
+                        <li><a href="">Departamentos</a></li>
+                        <li><a href="">Créditos</a></li>
+                        <li><a href="https://albertonava-16.github.io/Blogpost.html">Mi HyperBlog</a></li>
+                    </ul>
+                </nav>
             </header>
             <div id="FORMULARIO">
                 <form action="">
