--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -6,7 +6,7 @@
             <meta name="robots" content="index,follow"/>
             <meta name="description" content="En esta página podrás encontrar todo"/>
               <title>Diviertete comprando</title>
-              <link rel="stylesheet" href="./css/style.css"/>     
+              <link rel="stylesheet" href="./css/style.css">     
         </head>
         <body background="./imagen/Small.jpg">
             <header>
@@ -54,7 +54,7 @@
                   <option value="Motocicletas"></option>
                 </datalist> 
             </label>              
-                <div id="CUERPO">
+                <div class="CUERPO">
                     <div id="JUGUETES">                        
                         <img id="JUGUET1" src="./imagen/juguete.jgp.jfif" alt="Belbot" width="15%" />                            
                             <ul>
