pagina de inicio

--- a/test-position/index.html
+++ b/test-position/index.html
@@ -16,7 +16,7 @@
             <form class="formulario">
                 <input type="text" name="nombre" placeholder="Nombre" required>
                 <input type="password" name="contraseña" placeholder="Contraseña" required>
-                 <a href="https://albertonava-16.github.io/Blogpost.html" target="_blanck"><input type="submit" value="Entrar" class="submit"/>
+                 <a href="https://albertonava-16.github.io/Blogpost.html"><input type="submit" value="Entrar" class="submit"/>
                  </a>
             </form>
             <h3 class="loss">
