correcting margin and padding header

--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -9,12 +9,10 @@
               <link rel="stylesheet" href="./css/style.css">     
         </head>
         <body background="./imagen/Small.jpg" >
-            <header class="header">
-                <div class="header-container-items">
-                    <img src="./imagen/logo.png" width="10%" 
+            <header class="header">                
+                    <img src="./imagen/logo.png"  
                       alt="MiLogo"/>          
                     <span>Realiza aquí tus compras del super y màs ...</span>                
-                </div>
                 <nav class="header-container-nav">
                     <ul>
                         <li><a href="https://albertonava-16.github.io/Curso-Html.io/Paginafinal/index.html">home</a></li>
@@ -22,7 +20,7 @@
                         <li><a href="">Créditos</a></li>
                         <li><a href="https://albertonava-16.github.io/Blogpost.html">Mi HyperBlog</a></li>
                     </ul>
-                </nav>
+                </nav>            
             </header>
             <div class="user-register">
                 <form action="">
