--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -8,7 +8,7 @@
               <title>Diviertete comprando</title>
               <link rel="stylesheet" href="./css/style.css">     
         </head>
-        <body background="./imagen/Small.jpg" >
+        <body background="./imagen/background.jpg" >
             <header class="header">                
                     <img src="./imagen/logo.png"  
                       alt="MiLogo"/>          
@@ -21,9 +21,8 @@
                         <li><a href="https://albertonava-16.github.io/Blogpost.html">Mi HyperBlog</a></li>
                     </ul>
                 </nav>            
-            </header>
-            <div class="user-register">
-                <form action="">
+            </header>            
+                <form action="" class="user-register">
                     <label for="Nombre">
                       <span>¡Registrate! Tu nombre</span>
                       <input type="text" id="Nombre" placeholder="Tu nombre" autocomplete="name" required />
@@ -42,8 +41,7 @@
                         </datalist>   
                     </label>             
                     <button class="button">Registrarte y comenzar tu compra</button>
-                </form>
-            </div> 
+                </form>            
             <main>
             <div class="present">                   
                 <h3>¡Tu mejor opción! ingresa a cada una de nuestras secciones</h3>
@@ -56,10 +54,9 @@
                 </datalist> 
             </label>
             </div>              
-                <div class="body">
+                <div class="principal-body">
                    <section class="section1"> 
-                    <div class="play">                     
-                   
+                    <div class="play">                    
                             <ul>
                                 <a href="https://www.walmart.com.mx/juguetes" target="_blanck">
                                   <li>Juguetes para Navidad</li>
@@ -112,14 +109,16 @@
                                 <li>Celulares</li>
                                 <li>Hasta tablets</li>
                             </ol>
-                            <img class="tecnology-img" src="./imagen/PC.jpg" alt="Tecnologia" width="15%" />
                         </ul>
+                            <img class="tecnology-img" src="./imagen/PC.jpg" alt="Tecnologia" width="15%" />                       
                     </div>
-                </section>                    
-                </div>
+                </section>              
             </main>
-                <footer class="footer">
-                    <p>©2020 Diverticompra S.A. de C.V Acerca de Nosotros  Términos y condiciones  Aviso de privacidad Siguenos en:</p>                   
+                <footer>
+                    <p>©2020 Diverticompra S.A. de C.V</p>
+                     <p>Acerca de Nosotros</p>
+                     <p>Términos y condiciones</p>
+                     <p>Aviso de privacidad Siguenos en:</p>                   
                     <a href="https://www.facebook.com/" target="_blanck"><img id="REDES" src="./imagen/FB.png"/></a>
                     <a href="https://www.instagram.com/?hl=es-la" target="_blanck"><img src="./imagen/insta.png" /></a>
                 </footer>           
