--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -24,7 +24,7 @@
             </header>            
                 <form action="" class="user-register">
                     <label for="Nombre">
-                      <span>¡Registrate! Tu nombre</span>
+                      <span>Tu nombre</span>
                       <input type="text" id="Nombre" placeholder="Tu nombre" autocomplete="name" required />
                     </label>
                     <label for="email">
@@ -40,7 +40,7 @@
                           <option value="Fuera del área Metropolitana">Fuera del área Metropolitana</option>
                         </datalist>   
                     </label>             
-                    <button class="button">Registrarte y comenzar tu compra</button>
+                    <button class="button">¡Registrate! y comenzar tu compra</button>
                 </form>            
             <main>
             <div class="present">                   
