--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -15,10 +15,10 @@
                     <span>Realiza aquí tus compras del super y màs ...</span>                
                 <nav class="header-container-nav">
                     <ul>
-                        <li><a href="https://albertonava-16.github.io/Curso-Html.io/Paginafinal/index.html">home</a></li>
+                        <li><a href="https://albertonava-16.github.io/Curso-Html.io/test-position/index.html">home</a></li>
                         <li><a href="">Departamentos</a></li>
                         <li><a href="">Créditos</a></li>
-                        <li><a href="https://albertonava-16.github.io/Blogpost.html">Mi HyperBlog</a></li>
+                        <li><a href="https://albertonava-16.github.io/Blogpost.html">HyperBlog</a></li>
                     </ul>
                 </nav>            
             </header>            
