--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -8,7 +8,7 @@
               <title>Diviertete comprando</title>
               <link rel="stylesheet" href="./css/style.css">     
         </head>
-        <body background="./imagen/background.jpg" >
+        <body background="./imagen/prueba1jpg.jpg" >
             <header class="header">                
                     <img src="./imagen/logo.png"  
                       alt="MiLogo"/>          
