--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -8,7 +8,7 @@
               <title>Diviertete comprando</title>
               <link rel="stylesheet" href="./css/style.css">     
         </head>
-        <body background="./imagen/prueba1jpg.jpg" >
+        <body>
             <header class="header">                
                     <img src="./imagen/logo.png"  
                       alt="MiLogo"/>          
@@ -68,7 +68,7 @@
                                     <li>Juegos de mesa para toda la familia</li>
                                 </ol>
                             </ul>
-                            <img class="play-img" src="./imagen/juguete.jgp.jfif" alt="Belbot" />                                                          
+                            <img class="play-img" src="./imagen/playpng.png" alt="Belbot" />                                                          
                     </div>
                     <div class="whiteline">
                         <ul>
@@ -97,7 +97,7 @@
                                     <li>Y algunas màs baras</li>
                                 </ol>
                             </ul>
-                            <img class="motorcycle-img" src="./imagen/moto.jfif" alt="Motocicletas" width="15%" /> 
+                            <img class="motorcycle-img" src="./imagen/motopng.png" alt="Motocicletas" width="15%" /> 
                     </div>
                     <div class="tecnology">
                         <ul>
@@ -110,7 +110,7 @@
                                 <li>Hasta tablets</li>
                             </ol>
                         </ul>
-                            <img class="tecnology-img" src="./imagen/PC.jpg" alt="Tecnologia" width="15%" />                       
+                            <img class="tecnology-img" src="./imagen/PCpng.png" alt="Tecnologia" width="15%" />                       
                     </div>
                 </section>              
             </main>
