--- a/Paginafinal/index.html
+++ b/Paginafinal/index.html
@@ -43,7 +43,7 @@
                     <button class="button">¡Registrate! y comenzar tu compra</button>
                 </form>            
             <main>
-            <div class="present">                   
+            <section class="present">                   
                 <h3>¡Tu mejor opción! ingresa a cada una de nuestras secciones</h3>
             <label>               
             <input list="Search" placeholder="Buscar" />
@@ -53,9 +53,9 @@
                   <option value="Motocicletas"></option>
                 </datalist> 
             </label>
-            </div>              
-                <div class="principal-body">
-                   <section class="section1"> 
+            </section>              
+                <section class="principal-body">
+                   <article class="section1"> 
                     <div class="play">                    
                             <ul>
                                 <a href="https://www.walmart.com.mx/juguetes" target="_blanck">
@@ -84,8 +84,8 @@
                         </ul>
                         <img class="whiteline-img" src="./imagen/refrigerador.jfif" alt="Refrigerador"  />                         
                     </div>
-                </section>
-                <section class="section2">
+                </article>
+                <article class="section2">
                     <div class="motorcycle">
                             <ul>
                                 <a href="https://www.walmart.com.mx/deportes/motos" target="_blanck">
@@ -112,7 +112,8 @@
                         </ul>
                             <img class="tecnology-img" src="./imagen/PCpng.png" alt="Tecnologia" width="15%" />                       
                     </div>
-                </section>              
+                </article>   
+                </section>          
             </main>
                 <footer>
                     <p>©2020 Diverticompra S.A. de C.V</p>
